2. Second commit-rebased

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 	<h1>Learning Git</h1>
 	<p>1. First commit - Rename to - 1st commit</p>
+	<p>This a paragraph</p>
+	<p>This is also a paragraph</p>
+
 	<p>2. Second commit</p>
-	<p>3. Third commit</p>
 </body>
 </html>
