3. Third commit-rebased

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 	<p>This is also a paragraph</p>
 
 	<p>2. Second commit</p>
+
+	<br>
+	<p>This a paragraph</p>
+	<p>This is also a paragraph</p>
+
+	<p>3. Third commit</p>
 </body>
 </html>
